--- a/views/about.html
+++ b/views/about.html
@@ -22,7 +22,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <span class="navbar-brand" href="#">WEB322 - Anurag Das</span>
+          <span class="navbar-brand" href="#">BTI325 - Param Katrodia</span>
         </div>
     
         <!-- Collect the nav links, forms, and other content for toggling -->
